--- a/firstpage.html
+++ b/firstpage.html
@@ -31,9 +31,9 @@
    <table border="99">
     <thead>
       <tr>
-        <th>Date</th>
-        <th>Sales</th>
-        <th>Revenue</th>
+        <th>Number</th>
+        <th>Colour</th>
+        <th>Size</th>
       </tr>
     </thead>
     <tbody>
@@ -61,7 +61,7 @@
 <body>
   <!-- Basic Version -->
 
-  <table>
+  <table border="1">
     <thead>
       <tr>
         <th>1</th>
@@ -89,26 +89,6 @@
 <body>
   <!-- Borders -->
 
-  <table border="1">
-    <thead>
-      <tr>
-        <th>1</th>
-        <th>2</th>
-        <th>3</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>a</td>
-        <td>b</td>
-        <td>c</td>
-      </tr>
-      <tr>
-        <td>d</td>
-        <td>e</td>
-        <td>f</td>
-    </tbody>
-  </table>
 
 </body>
 </html>
